@@ -1,5 +1,8 @@
 2004-11-16  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scm/output-gnome.scm (text): Revert to file name of font if font
+	has no name.  Fixes ec font selection.
+
 	* scm/framework-svg.scm:
 	* scm/output-svg.scm: New file.  TODO: figure out how to
 	do character by index in font.
